added field "sackedInternUserIds" into updateRequestDto